Correct home hero sizing

--- a/templates/src/css/sass/pages/home.scss
+++ b/templates/src/css/sass/pages/home.scss
@@ -12,7 +12,8 @@
     }
   }
 
-  .header-hero-title {
+  .header-hero-title,
+  .header-hero-title strong {
     font-size: 48px;
 
     @include media-breakpoint-up(sm) {
