--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -3,7 +3,7 @@ title: "Jack’s Story"
 layout: default
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-dive"
+  header__classes="decor decor-bottom decor-rc-sunny"
   header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
