--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_howitworks: true
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-dive"
+  header__classes="decor decor-bottom decor-rc-sunny"
   header__style=false
   header__nav=true
   header__hero=true
