--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -3,7 +3,7 @@ title: "Content"
 layout: default
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-dive"
+  header__classes="decor decor-bottom decor-rc-sunny"
   header__nav=true
   header__hero=true
   header__hero__text='Content Page'
