--- a/templates/src/pages/styleguide-header.hbs
+++ b/templates/src/pages/styleguide-header.hbs
@@ -55,7 +55,7 @@ layout: styleguide
     <h3 class="styleguide-h3">Header with decor, navigation and hero text</h3>
     <div class="styleguide-example">
 {{> header
-  header__classes="decor decor-bottom decor-rc-dive"
+  header__classes="decor decor-bottom decor-rc-sunny"
   header__style=false
   header__nav=true
   header__hero=true
@@ -63,7 +63,7 @@ layout: styleguide
 }}
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;header class=&#x22;header decor decor-bottom decor-rc-dive&#x22; role=&#x22;banner&#x22; style=&#x22;background-image: url(assets/uploads/header-worldcap.jpg);&#x22;&#x3E;
+      <pre><code>&#x3C;header class=&#x22;header decor decor-bottom decor-rc-sunny&#x22; role=&#x22;banner&#x22; style=&#x22;background-image: url(assets/uploads/header-worldcap.jpg);&#x22;&#x3E;
   &#x3C;a class=&#x22;header-skip&#x22; href=&#x22;#main&#x22;&#x3E;Skip to main content&#x3C;/a&#x3E;
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
@@ -93,7 +93,7 @@ layout: styleguide
     <h3 class="styleguide-h3">Header with background image, decor, navigation and hero text</h3>
     <div class="styleguide-example">
 {{> header
-  header__classes="decor decor-bottom decor-rc-dive"
+  header__classes="decor decor-bottom decor-rc-sunny"
   header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
@@ -101,7 +101,7 @@ layout: styleguide
 }}
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;header class=&#x22;header decor decor-bottom decor-rc-dive&#x22; role=&#x22;banner&#x22; style=&#x22;background-image: url(assets/uploads/header-worldcap.jpg);&#x22;&#x3E;
+      <pre><code>&#x3C;header class=&#x22;header decor decor-bottom decor-rc-sunny&#x22; role=&#x22;banner&#x22; style=&#x22;background-image: url(assets/uploads/header-worldcap.jpg);&#x22;&#x3E;
   &#x3C;a class=&#x22;header-skip&#x22; href=&#x22;#main&#x22;&#x3E;Skip to main content&#x3C;/a&#x3E;
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
@@ -131,7 +131,7 @@ layout: styleguide
     <h3 class="styleguide-h3">Header on Home with background image, decor, navigation and hero text</h3>
     <div class="styleguide-example">
 {{> header
-  header__classes="home-header decor decor-bottom decor-rc-dive"
+  header__classes="home-header decor decor-bottom decor-rc-sunny"
   header__style="background-image: url(assets/home-header.jpg);"
   header__nav=true
   header__hero=true
@@ -139,7 +139,7 @@ layout: styleguide
 }}
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;header class=&#x22;header home-header decor decor-bottom decor-rc-dive&#x22; role=&#x22;banner&#x22; style=&#x22;background-image: url(assets/uploads/header-worldcap.jpg);&#x22;&#x3E;
+      <pre><code>&#x3C;header class=&#x22;header home-header decor decor-bottom decor-rc-sunny&#x22; role=&#x22;banner&#x22; style=&#x22;background-image: url(assets/uploads/header-worldcap.jpg);&#x22;&#x3E;
   &#x3C;a class=&#x22;header-skip&#x22; href=&#x22;#main&#x22;&#x3E;Skip to main content&#x3C;/a&#x3E;
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
