--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -76,7 +76,8 @@ header_nav_home: true
     </div>
     <div class="home-partners-media aspect-bg aspect-bg-2by1">
       <div class="aspect aspect-2by1">
-        <img alt="" src="assets/uploads/home-partners-media.jpg">
+        <iframe src="https://www.youtube.com/embed/pjxX5ndMCDo?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        {{!-- <img alt="" src="assets/uploads/home-partners-media.jpg"> --}}
       </div>
     </div>
     <div class="home-partners-body">
