--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -72,9 +72,9 @@ $body-color: $color-black-sec;
 //
 // Links
 //
-$link-color: $color-rc-aubergine;
+$link-color: $color-rc-dive;
 $link-decoration: underline;
-$link-hover-color: darken($color-rc-aubergine, 15%);
+$link-hover-color: darken($color-rc-dive, 15%);
 $link-hover-decoration: none;
 
 //
