--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -40,7 +40,7 @@ header_nav_howtoapply: true
   </div>
 </div>
 
-<section class="section bg-rc-blue pre-footer-withcityscape edge edge-top edge-rc-blue-top">
+<section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
   <div class="container">
     <div class="content">
       <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
