--- a/templates/src/pages/page-privacy.hbs
+++ b/templates/src/pages/page-privacy.hbs
@@ -24,7 +24,7 @@ layout: default
   </div>
 </div>
 
-<section class="section bg-rc-blue pre-footer-withcityscape edge edge-top edge-rc-blue-top">
+<section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
   <div class="container">
     <div class="content">
       <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
