Adds Get Involved page

--- a/templates/src/_components/header/header.hbs
+++ b/templates/src/_components/header/header.hbs
@@ -13,12 +13,12 @@
     <nav class="header-body" role="navigation" aria-labelledby="nav-site">
       <h2 class="sr-only" id="nav-site">Site navigation</h2>
       <ul class="header-nav">
-        <li{{#if header_nav_home}} class="header-nav-active"{{/if}}><a href="page-home.html">Home</a></li>
-        <li{{#if header_nav_howitworks}} class="header-nav-active"{{/if}}><a href="page-howitworks.html">How</a></li>
-        <li{{#if header_nav_howtoapply}} class="header-nav-active"{{/if}}><a href="page-howtoapply.html">Apply</a></li>
-        <li{{#if header_nav_casestudies}} class="header-nav-active"{{/if}}><a href="page-stories.html">Stories</a></li>
+        <li{{#if header_nav_howitworks}} class="header-nav-active"{{/if}}><a href="page-howitworks.html">How it works</a></li>
+        <li{{#if header_nav_howtoapply}} class="header-nav-active"{{/if}}><a href="page-howtoapply.html">How to apply</a></li>
+        <li{{#if header_nav_getinvolved}} class="header-nav-active"{{/if}}><a href="page-getinvolved.html">Get involved</a></li>
+        {{!-- <li{{#if header_nav_casestudies}} class="header-nav-active"{{/if}}><a href="page-stories.html">Stories</a></li> --}}
         {{!-- <li{{#if header_nav_contact}} class="header-nav-active"{{/if}}><a href="page-about.html">Contact</a></li> --}}
-        {{!-- <li{{#if header_nav_donate}} class="header-nav-active"{{/if}}><a class="bg-rc-spark header-nav-donate" href="page-about.html">DONATE</a></li> --}}
+        {{!-- <li class="header-nav-donate"><a class="button" href="page-about.html">DONATE</a></li> --}}
       </ul>
     </nav>
     {{/if}}
