--- a/templates/src/pages/index.hbs
+++ b/templates/src/pages/index.hbs
@@ -39,6 +39,7 @@ layout: styleguide
         <li><a href="page-casestudy.html">Case Study</a></li>
         <li><a href="page-howitworks.html">How it Works</a></li>
         <li><a href="page-howtoapply.html">How to Apply</a></li>
+        <li><a href="page-getinvolved.html">Get Involved</a></li>
         <li><a href="page-content.html">Content</a></li>
         <li><a href="page-privacy.html">Privacy Policy</a></li>
       </ul>
