--- a/hugo/assets/realchange.css
+++ b/hugo/assets/realchange.css
@@ -443,9 +443,13 @@ p + .button { margin-top: 1rem; }
 
 .header-body { margin-left: auto; padding-right: 0.5rem; padding-top: 1.125rem; }
 
+@media (max-width: 767.98px) { .header-body { -webkit-box-flex: 1; -ms-flex: 1 1 0%; flex: 1 1 0%; text-align: right; } }
+
 @media (min-width: 768px) { .header-body { padding-right: 1rem; padding-top: 2.125rem; } }
 
 .header-nav { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; list-style: none; margin-bottom: 0; padding-left: 0; }
+
+@media (max-width: 767.98px) { .header-nav { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; } }
 
 .header-nav li + li { margin-left: 0.25rem; }
 
@@ -453,13 +457,17 @@ p + .button { margin-top: 1rem; }
 
 @media (min-width: 768px) { .header-nav li + li { margin-left: 0.5rem; } }
 
-.header-nav a { background-color: #1D1D1C; color: #FFFFFF; display: block; font-weight: 700; padding: 0.25rem 0.375rem; text-decoration: none; text-transform: uppercase; }
+.header-nav a { color: #000000; display: block; font-weight: 700; padding: 0.25rem 0.175rem; text-decoration: none; }
 
 @media (min-width: 768px) { .header-nav a { padding-left: 0.5rem; padding-right: 0.5rem; } }
 
-.header-nav a:hover { background-color: #E96187; color: #FFFFFF; }
+.header-nav a:hover { color: #FFFFFF; }
 
-.header-nav .header-nav-active a { background-color: #E96187; color: #FFFFFF; }
+.header-nav .header-nav-active a { text-decoration: underline; }
+
+@media (max-width: 767.98px) { .header-nav-donate { display: block; -webkit-box-flex: 1; -ms-flex: 1 0 100%; flex: 1 0 100%; } }
+
+.header-nav-donate .button:hover { color: #000000; }
 
 .header-hero { -webkit-box-flex: 1; -ms-flex: 1 0 100%; flex: 1 0 100%; padding: 1rem 2rem 2rem; -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; text-align: center; }
 
@@ -626,6 +634,16 @@ p + .button { margin-top: 1rem; }
 @media (min-width: 576px) { .casestudy-header-media { margin-bottom: 0; margin-right: 1rem; max-width: 260px; } }
 
 @media (min-width: 768px) { .casestudy-header-media { margin-right: 1.5rem; max-width: 360px; } }
+
+.getinvolved-section { -webkit-box-align: start; -ms-flex-align: start; align-items: flex-start; }
+
+@media (min-width: 576px) { .getinvolved-section { display: -webkit-box; display: -ms-flexbox; display: flex; } }
+
+.getinvolved-section-body { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+
+.getinvolved-section-media { margin-top: 1rem; }
+
+@media (min-width: 576px) { .getinvolved-section-media { margin-left: 1em; margin-top: 0; max-width: 320px; } }
 
 .bg-black { background-color: #000000 !important; }
 
