--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -12,9 +12,9 @@
     <nav class="header-body" role="navigation" aria-labelledby="nav-site">
       <h2 class="sr-only" id="nav-site">Site navigation</h2>
       <ul class="header-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/how-it-works/">How</a></li>
-        <li><a href="/how-to-apply/">Apply</a></li>
+        <li><a href="/how-it-works/">How it Works</a></li>
+        <li><a href="/how-to-apply/">Apply to Apply</a></li>
+        <li><a href="/get-involved/">Get Involved</a></li>
       </ul>
     </nav>
     {{ if .hero }}
