--- a/templates/src/_components/header/_header.scss
+++ b/templates/src/_components/header/_header.scss
@@ -112,6 +112,12 @@
   padding-right: 0.5rem;
   padding-top: 1.125rem;
 
+  @include media-breakpoint-down(sm) {
+    // background-color: red;
+    flex: 1 1 0%;
+    text-align: right;
+  }
+
   @include media-breakpoint-up(md) {
     padding-right: 1rem;
     padding-top: 2.125rem;
@@ -126,6 +132,10 @@
   margin-bottom: 0;
   padding-left: 0;
 
+  @include media-breakpoint-down(sm) {
+    justify-content: flex-end;
+  }
+
   li + li {
     margin-left: 0.25rem;
 
@@ -139,13 +149,11 @@
   }
 
   a {
-    background-color: $color-rc-black;
-    color: $color-white;
+    color: $color-black;
     display: block;
     font-weight: $font-weight-bold;
-    padding: 0.25rem 0.375rem;
+    padding: 0.25rem 0.175rem;
     text-decoration: none;
-    text-transform: uppercase;
 
     @include media-breakpoint-up(md) {
       padding-left: 0.5rem;
@@ -153,15 +161,27 @@
     }
 
     @include hover {
-      background-color: $color-rc-candy;
       color: $color-white;
     }
   }
 
   .header-nav-active {
     a {
-      background-color: $color-rc-candy;
-      color: $color-white;
+      // color: $color-white;
+      text-decoration: underline;
+    }
+  }
+}
+
+.header-nav-donate {
+  @include media-breakpoint-down(sm) {
+    display: block;
+    flex: 1 0 100%;
+  }
+
+  .button {
+    @include hover {
+      color: $color-black;
     }
   }
 }
