Correct Get Involved image

--- a/hugo/layouts/section/get-involved.html
+++ b/hugo/layouts/section/get-involved.html
@@ -22,7 +22,7 @@
         </div>
         {{ if .Params.section.image }}
         <div class="getinvolved-section-media aspect aspect-4by3">
-          <img alt="" src="{{ .Params.partners.image }}">
+          <img alt="" src="{{ .Params.section.image }}">
         </div>
         {{ end }}
       </div>
