--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -12,9 +12,10 @@
     <nav class="header-body" role="navigation" aria-labelledby="nav-site">
       <h2 class="sr-only" id="nav-site">Site navigation</h2>
       <ul class="header-nav">
-        <li><a href="/how-it-works/">How it Works</a></li>
-        <li><a href="/how-to-apply/">Apply to Apply</a></li>
-        <li><a href="/get-involved/">Get Involved</a></li>
+        <li><a href="/how-it-works/">How it works</a></li>
+        <li><a href="/how-to-apply/">How to apply</a></li>
+        <li><a href="/get-involved/">Get involved</a></li>
+        <li class="header-nav-donate"><a href="#" target="_blank">Donate</a></li>
       </ul>
     </nav>
     {{ if .hero }}
