--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -10,43 +10,45 @@ layout: default
   header__hero__text='Real Change in Wigan &amp; Leigh <strong> Jack’s Story</strong>'
 }}
 
-<article class="section casestudy">
-  <div class="container">
-    <div class="casestudy-header">
-      <div class="casestudy-header-media aspect-bg aspect-bg-4by3">
-        <div class="aspect aspect-4by3">
-          <img alt="" src="assets/uploads/story-jack-4by3.jpg">
+<div id="main">
+  <article class="section casestudy">
+    <div class="container">
+      <div class="casestudy-header">
+        <div class="casestudy-header-media aspect-bg aspect-bg-4by3">
+          <div class="aspect aspect-4by3">
+            <img alt="" src="assets/uploads/story-jack-4by3.jpg">
+          </div>
+        </div>
+        <div class="casestudy-header-body">
+          <h4 class="h2 mb-n">Name:</h4>
+          <p>Jack Johnson</p>
+          <h4 class="h2 mb-n">Age:</h4>
+          <p>26</p>
+          <h4 class="h2 mb-n">Help Received:</h4>
+          <p>Received help with a deposit for a flat</p>
         </div>
       </div>
-      <div class="casestudy-header-body">
-        <h4 class="h2 mb-n">Name:</h4>
-        <p>Jack Johnson</p>
-        <h4 class="h2 mb-n">Age:</h4>
-        <p>26</p>
-        <h4 class="h2 mb-n">Help Received:</h4>
-        <p>Received help with a deposit for a flat</p>
+      <div class="casestudy-body">
+        <div class="content">
+          <h2> Jack’s Story</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <blockquote>
+            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+          </blockquote>
+        </div>
       </div>
     </div>
-    <div class="casestudy-body">
-      <div class="content">
-        <h2> Jack’s Story</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <blockquote>
-          <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-        </blockquote>
-      </div>
-    </div>
-  </div>
-</article>
+  </article>
 
-<section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
-  <div class="container">
-    <div class="content">
-      <h3>{{> icon-like icon-like__height="44" icon-like__width="44" }} The real change you made</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a class="button button-primary d-block d-sm-inline-block mb-sm" href="#">Donate and make a real change</a>
+  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+    <div class="container">
+      <div class="content">
+        <h3>{{> icon-like icon-like__height="44" icon-like__width="44" }} The real change you made</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a class="button button-primary d-block d-sm-inline-block mb-sm" href="#">Donate and make a real change</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
 
 {{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
