--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -11,42 +11,44 @@ header_nav_howtoapply: true
   header__hero__text='Real Change in Wigan &amp; Leigh <strong> How to Apply</strong>'
 }}
 
-<div class="section">
-  <div class="container">
-    <div class="content">
-      <p class="body-lg"><strong>If you are sleeping rough and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf:</strong></p>
-      <ul class="list-flex font-weight-bold">
-        <li><a href="#" target="_blank">Barnabus</a></li>
-        <li><a href="#" target="_blank">Big Issue North</a></li>
-        <li><a href="#" target="_blank">Boaz Trust</a></li>
-        <li><a href="#" target="_blank">Booth Centre</a></li>
-        <li><a href="#" target="_blank">Centrepoint North</a></li>
-        <li><a href="#" target="_blank">Change4Good</a></li>
-        <li><a href="#" target="_blank">Coffee4Craig</a></li>
-        <li><a href="#" target="_blank">Cornerstone</a></li>
-        <li><a href="#" target="_blank">Just Life</a></li>
-        <li><a href="#" target="_blank">Lifeshare</a></li>
-        <li><a href="#" target="_blank">Manchester City of Sanctuary</a></li>
-        <li><a href="#" target="_blank">MASH</a></li>
-        <li><a href="#" target="_blank">MCC Rough Sleeper Team</a></li>
-        <li><a href="#" target="_blank">Mens Room</a></li>
-        <li><a href="#" target="_blank">Mustard Tree</a></li>
-        <li><a href="#" target="_blank">On The Out</a></li>
-        <li><a href="#" target="_blank">Reach Out to the Community</a></li>
-        <li><a href="#" target="_blank">Riverside</a></li>
-        <li><a href="#" target="_blank">Shelter</a></li>
-      </ul>
+<div id="main">
+  <div class="section">
+    <div class="container">
+      <div class="content">
+        <p class="body-lg"><strong>If you are sleeping rough and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf:</strong></p>
+        <ul class="list-flex font-weight-bold">
+          <li><a href="#" target="_blank">Barnabus</a></li>
+          <li><a href="#" target="_blank">Big Issue North</a></li>
+          <li><a href="#" target="_blank">Boaz Trust</a></li>
+          <li><a href="#" target="_blank">Booth Centre</a></li>
+          <li><a href="#" target="_blank">Centrepoint North</a></li>
+          <li><a href="#" target="_blank">Change4Good</a></li>
+          <li><a href="#" target="_blank">Coffee4Craig</a></li>
+          <li><a href="#" target="_blank">Cornerstone</a></li>
+          <li><a href="#" target="_blank">Just Life</a></li>
+          <li><a href="#" target="_blank">Lifeshare</a></li>
+          <li><a href="#" target="_blank">Manchester City of Sanctuary</a></li>
+          <li><a href="#" target="_blank">MASH</a></li>
+          <li><a href="#" target="_blank">MCC Rough Sleeper Team</a></li>
+          <li><a href="#" target="_blank">Mens Room</a></li>
+          <li><a href="#" target="_blank">Mustard Tree</a></li>
+          <li><a href="#" target="_blank">On The Out</a></li>
+          <li><a href="#" target="_blank">Reach Out to the Community</a></li>
+          <li><a href="#" target="_blank">Riverside</a></li>
+          <li><a href="#" target="_blank">Shelter</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-<section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
-  <div class="container">
-    <div class="content">
-      <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
-      <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+  <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
+    <div class="container">
+      <div class="content">
+        <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
+        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
 
 {{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
