--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -11,46 +11,48 @@ header_nav_casestudies: true
   header__hero__text='Real Change in Wigan &amp; Leigh <strong>Stories</strong>'
 }}
 
-<div class="section">
-  <div class="container">
-    <div class="content body-lg">
-      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque laborum voluptatibus, eius in a quas aspernatur harum autem, amet, nostrum libero facilis. Neque impedit quidem fugit adipisci, eius perspiciatis. Maiores?</strong></p>
+<div id="main">
+  <div class="section">
+    <div class="container">
+      <div class="content body-lg">
+        <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque laborum voluptatibus, eius in a quas aspernatur harum autem, amet, nostrum libero facilis. Neque impedit quidem fugit adipisci, eius perspiciatis. Maiores?</strong></p>
+      </div>
     </div>
   </div>
-</div>
 
-<section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
-  <div class="container">
-    <div class="home-stories-header">
-      <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
-    </div>
-    <div class="home-stories-body">
-      <div class="card-story card-stroy-witharrow">
-        <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-        <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/uploads/story-jack-5by2.jpg">
-        </div>
-        <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
+  <section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
+    <div class="container">
+      <div class="home-stories-header">
+        <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
       </div>
-      <div class="card-story card-stroy-witharrow">
-        <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
-        <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/uploads/story-danny-5by2.jpg">
+      <div class="home-stories-body">
+        <div class="card-story card-stroy-witharrow">
+          <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
+          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+            <img alt="" src="assets/uploads/story-jack-5by2.jpg">
+          </div>
+          <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
         </div>
-        <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
+        <div class="card-story card-stroy-witharrow">
+          <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
+          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+            <img alt="" src="assets/uploads/story-danny-5by2.jpg">
+          </div>
+          <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
+        </div>
+        <div class="card-story card-stroy-witharrow">
+          <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
+          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+            <img alt="" src="assets/uploads/story-jack-5by2.jpg">
+          </div>
+          <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
+        </div>
       </div>
-      <div class="card-story card-stroy-witharrow">
-        <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-        <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/uploads/story-jack-5by2.jpg">
-        </div>
-        <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
+      <div class="home-stories-footer text-center">
+        <a class="button button-primary mb-md" href="#">Donate and make a real change</a>
       </div>
     </div>
-    <div class="home-stories-footer text-center">
-      <a class="button button-primary mb-md" href="#">Donate and make a real change</a>
-    </div>
-  </div>
-</section>
+  </section>
+</div>
 
 {{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
