--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -9,32 +9,34 @@ layout: default
   header__hero__text='Content Page'
 }}
 
-<div class="section">
-  <div class="container">
-    <div class="content">
-      <h1>Content Page</h1>
-      <p class="body-lg">This is the Real Change Privacy Policy.</p>
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <h2>Heading level 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. Accusamus, eum.</p>
-      <p>Ad tempore omnis, totam sit, nostrum enim excepturi. Recusandae dignissimos at id eaque dolore voluptates, laborum aperiam cupiditate illum similique cum exercitationem!</p>
-      <h3>Heading level 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. Accusamus, eum.</p>
-      <p>Ad tempore omnis, totam sit, nostrum enim excepturi. Recusandae dignissimos at id eaque dolore voluptates, laborum aperiam cupiditate illum similique cum exercitationem!</p>
-      <a class="button button-primary d-block d-sm-inline-block" href="#">Button</a>
+<div id="main">
+  <div class="section">
+    <div class="container">
+      <div class="content">
+        <h1>Content Page</h1>
+        <p class="body-lg">This is the Real Change Privacy Policy.</p>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2>Heading level 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. Accusamus, eum.</p>
+        <p>Ad tempore omnis, totam sit, nostrum enim excepturi. Recusandae dignissimos at id eaque dolore voluptates, laborum aperiam cupiditate illum similique cum exercitationem!</p>
+        <h3>Heading level 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. Accusamus, eum.</p>
+        <p>Ad tempore omnis, totam sit, nostrum enim excepturi. Recusandae dignissimos at id eaque dolore voluptates, laborum aperiam cupiditate illum similique cum exercitationem!</p>
+        <a class="button button-primary d-block d-sm-inline-block" href="#">Button</a>
+      </div>
     </div>
   </div>
-</div>
 
-<section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
-  <div class="container">
-    <div class="content">
-      <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
-      <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+    <div class="container">
+      <div class="content">
+        <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
+        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
 
 {{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
