--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -11,101 +11,103 @@ header_nav_home: true
   header__hero__text='<span>Help make</span> a Real Change in <strong>Wigan &amp; Leigh</strong>'
 }}
 
-<section class="section home-intro">
-  <div class="container">
-    <div class="boxed edges bg-rc-sunny home-intro-whatis">
-      <div class="boxed-inner">
-        <h2>What is Real Change?</h2>
-        <p><strong>Real Change pays for practical items individuals need to build independent lives away from the streets.</strong></p>
-        <p>If everyone who lives, works or visits Wigan &amp; Leigh donates, together we can make a Real Change!</p>
-        <a class="button d-block" href="#">Donate and make a real change</a>
-      </div>
-      <div class="boxed-media aspect aspect-6by5">
-        <img alt="" class="aspect-item" src="assets/uploads/home-intro-whatis.png">
-      </div>
-    </div>
-    <div class="home-intro-split">
-      <div class="boxed edges bg-rc-dive home-intro-who">
+<div id="main">
+  <section class="section home-intro">
+    <div class="container">
+      <div class="boxed edges bg-rc-sunny home-intro-whatis">
         <div class="boxed-inner">
-          <h2>Who does Real Change help?</h2>
-          <p><strong>The Real Change fund supports individuals who are homeless by paying for items they need -</strong> a deposit for a home, a training course, clothes for a job interview, furnishing for a new flat, or travel costs.</p>
-          <p><a href="#">Find out more about how Real Change works and how the money is spent.</a></p>
+          <h2>What is Real Change?</h2>
+          <p><strong>Real Change pays for practical items individuals need to build independent lives away from the streets.</strong></p>
+          <p>If everyone who lives, works or visits Wigan &amp; Leigh donates, together we can make a Real Change!</p>
+          <a class="button d-block" href="#">Donate and make a real change</a>
+        </div>
+        <div class="boxed-media aspect aspect-6by5">
+          <img alt="" class="aspect-item" src="assets/uploads/home-intro-whatis.png">
         </div>
       </div>
-      <div class="boxed edges bg-rc-spark home-intro-apply">
-        <div class="boxed-inner">
-          <h2>How can you apply?</h2>
-          <p>If your organisation provides a service to support people who are homeless in Wigan &amp; Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
+      <div class="home-intro-split">
+        <div class="boxed edges bg-rc-dive home-intro-who">
+          <div class="boxed-inner">
+            <h2>Who does Real Change help?</h2>
+            <p><strong>The Real Change fund supports individuals who are homeless by paying for items they need -</strong> a deposit for a home, a training course, clothes for a job interview, furnishing for a new flat, or travel costs.</p>
+            <p><a href="#">Find out more about how Real Change works and how the money is spent.</a></p>
+          </div>
+        </div>
+        <div class="boxed edges bg-rc-spark home-intro-apply">
+          <div class="boxed-inner">
+            <h2>How can you apply?</h2>
+            <p>If your organisation provides a service to support people who are homeless in Wigan &amp; Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
-  <div class="container">
-    <div class="home-stories-header">
-      <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
-    </div>
-    <div class="home-stories-body">
-      <div class="card-story card-stroy-witharrow">
-        <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-        <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/uploads/story-jack-5by2.jpg">
-        </div>
-        <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
+  <section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
+    <div class="container">
+      <div class="home-stories-header">
+        <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
       </div>
-      <div class="card-story card-stroy-witharrow">
-        <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
-        <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/uploads/story-danny-5by2.jpg">
+      <div class="home-stories-body">
+        <div class="card-story card-stroy-witharrow">
+          <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
+          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+            <img alt="" src="assets/uploads/story-jack-5by2.jpg">
+          </div>
+          <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
         </div>
-        <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
+        <div class="card-story card-stroy-witharrow">
+          <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
+          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+            <img alt="" src="assets/uploads/story-danny-5by2.jpg">
+          </div>
+          <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
+        </div>
+      </div>
+      <div class="home-stories-footer text-center">
+        <a class="button button-primary" href="#">Donate and make a real change</a>
       </div>
     </div>
-    <div class="home-stories-footer text-center">
-      <a class="button button-primary" href="#">Donate and make a real change</a>
-    </div>
-  </div>
-</section>
+  </section>
 
-<section class="section bg-rc-dive home-partners pre-footer-withcityscape edge edge-top edge-rc-dive-top">
-  <div class="container">
-    <div class="home-partners-header">
-      <h2 class="h1 home-partners-title">{{> icon-like icon-like__height="44" icon-like__width="44" }} Help from our Partners</h2>
-    </div>
-    <div class="home-partners-media aspect-bg aspect-bg-2by1">
-      <div class="aspect aspect-2by1">
-        <iframe src="https://www.youtube.com/embed/pjxX5ndMCDo?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        {{!-- <img alt="" src="assets/uploads/home-partners-media.jpg"> --}}
+  <section class="section bg-rc-dive home-partners pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+    <div class="container">
+      <div class="home-partners-header">
+        <h2 class="h1 home-partners-title">{{> icon-like icon-like__height="44" icon-like__width="44" }} Help from our Partners</h2>
+      </div>
+      <div class="home-partners-media aspect-bg aspect-bg-2by1">
+        <div class="aspect aspect-2by1">
+          <iframe src="https://www.youtube.com/embed/pjxX5ndMCDo?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          {{!-- <img alt="" src="assets/uploads/home-partners-media.jpg"> --}}
+        </div>
+      </div>
+      <div class="home-partners-body">
+        <p><strong>If you are sleeping rough in Wigan &amp; Leigh and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf.</strong></p>
+        <p>Real Change Wigan &amp; Leigh currently works in partnership with the following organisations:</p>
+        <ul class="list-flex font-weight-bold">
+          <li><a href="#" target="_blank">Barnabus</a></li>
+          <li><a href="#" target="_blank">Big Issue North</a></li>
+          <li><a href="#" target="_blank">Boaz Trust</a></li>
+          <li><a href="#" target="_blank">Booth Centre</a></li>
+          <li><a href="#" target="_blank">Centrepoint North</a></li>
+          <li><a href="#" target="_blank">Change4Good</a></li>
+          <li><a href="#" target="_blank">Coffee4Craig</a></li>
+          <li><a href="#" target="_blank">Cornerstone</a></li>
+          <li><a href="#" target="_blank">Just Life</a></li>
+          <li><a href="#" target="_blank">Lifeshare</a></li>
+          <li><a href="#" target="_blank">Manchester City of Sanctuary</a></li>
+          <li><a href="#" target="_blank">MASH</a></li>
+          <li><a href="#" target="_blank">MCC Rough Sleeper Team</a></li>
+          <li><a href="#" target="_blank">Mens Room</a></li>
+          <li><a href="#" target="_blank">Mustard Tree</a></li>
+          <li><a href="#" target="_blank">On The Out</a></li>
+          <li><a href="#" target="_blank">Reach Out to the Community</a></li>
+          <li><a href="#" target="_blank">Riverside</a></li>
+          <li><a href="#" target="_blank">Shelter</a></li>
+        </ul>
       </div>
     </div>
-    <div class="home-partners-body">
-      <p><strong>If you are sleeping rough in Wigan &amp; Leigh and want to apply for funds to help you get off the street, get in touch with one of our partner organisations who will work with you to apply for funds on your behalf.</strong></p>
-      <p>Real Change Wigan &amp; Leigh currently works in partnership with the following organisations:</p>
-      <ul class="list-flex font-weight-bold">
-        <li><a href="#" target="_blank">Barnabus</a></li>
-        <li><a href="#" target="_blank">Big Issue North</a></li>
-        <li><a href="#" target="_blank">Boaz Trust</a></li>
-        <li><a href="#" target="_blank">Booth Centre</a></li>
-        <li><a href="#" target="_blank">Centrepoint North</a></li>
-        <li><a href="#" target="_blank">Change4Good</a></li>
-        <li><a href="#" target="_blank">Coffee4Craig</a></li>
-        <li><a href="#" target="_blank">Cornerstone</a></li>
-        <li><a href="#" target="_blank">Just Life</a></li>
-        <li><a href="#" target="_blank">Lifeshare</a></li>
-        <li><a href="#" target="_blank">Manchester City of Sanctuary</a></li>
-        <li><a href="#" target="_blank">MASH</a></li>
-        <li><a href="#" target="_blank">MCC Rough Sleeper Team</a></li>
-        <li><a href="#" target="_blank">Mens Room</a></li>
-        <li><a href="#" target="_blank">Mustard Tree</a></li>
-        <li><a href="#" target="_blank">On The Out</a></li>
-        <li><a href="#" target="_blank">Reach Out to the Community</a></li>
-        <li><a href="#" target="_blank">Riverside</a></li>
-        <li><a href="#" target="_blank">Shelter</a></li>
-      </ul>
-    </div>
-  </div>
-</section>
+  </section>
+</div>
 
 {{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
