Updates menu styles

--- a/templates/src/_components/header/header.hbs
+++ b/templates/src/_components/header/header.hbs
@@ -18,7 +18,7 @@
         <li{{#if header_nav_getinvolved}} class="header-nav-active"{{/if}}><a href="page-getinvolved.html">Get involved</a></li>
         {{!-- <li{{#if header_nav_casestudies}} class="header-nav-active"{{/if}}><a href="page-stories.html">Stories</a></li> --}}
         {{!-- <li{{#if header_nav_contact}} class="header-nav-active"{{/if}}><a href="page-about.html">Contact</a></li> --}}
-        {{!-- <li class="header-nav-donate"><a class="button" href="page-about.html">DONATE</a></li> --}}
+        <li class="header-nav-donate"><a class="button" href="#" target="_blank">Donate</a></li>
       </ul>
     </nav>
     {{/if}}
