--- a/hugo/assets/realchange.css
+++ b/hugo/assets/realchange.css
@@ -451,6 +451,8 @@ p + .button { margin-top: 1rem; }
 
 @media (max-width: 767.98px) { .header-nav { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; } }
 
+.header-nav li { margin-bottom: 0.25rem; }
+
 .header-nav li + li { margin-left: 0.25rem; }
 
 @media (min-width: 576px) { .header-nav li + li { margin-left: 0.375rem; } }
@@ -465,9 +467,15 @@ p + .button { margin-top: 1rem; }
 
 .header-nav .header-nav-active a { text-decoration: underline; }
 
-@media (max-width: 767.98px) { .header-nav-donate { display: block; -webkit-box-flex: 1; -ms-flex: 1 0 100%; flex: 1 0 100%; } }
+.header-nav .header-nav-donate { margin-left: 0.5rem; }
 
-.header-nav-donate .button:hover { color: #000000; }
+@media (min-width: 768px) { .header-nav .header-nav-donate { margin-left: 1rem; margin-top: -2px; } }
+
+.header-nav .header-nav-donate a { font-size: 1.125rem; line-height: 1.1111111111; padding: 0.1875rem 0.75rem; }
+
+.header-nav .header-nav-donate a:focus, .header-nav .header-nav-donate a:hover { color: #0d0d0d; }
+
+@media (min-width: 768px) { .header-nav .header-nav-donate a { font-size: 1.375rem; padding: 0.375rem 2rem 0.125rem 2rem; } }
 
 .header-hero { -webkit-box-flex: 1; -ms-flex: 1 0 100%; flex: 1 0 100%; padding: 1rem 2rem 2rem; -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; text-align: center; }
 
