--- a/templates/src/_components/header/_header.scss
+++ b/templates/src/_components/header/_header.scss
@@ -136,6 +136,10 @@
     justify-content: flex-end;
   }
 
+  li {
+    margin-bottom: 0.25rem;
+  }
+
   li + li {
     margin-left: 0.25rem;
 
@@ -171,17 +175,30 @@
       text-decoration: underline;
     }
   }
-}
 
-.header-nav-donate {
-  @include media-breakpoint-down(sm) {
-    display: block;
-    flex: 1 0 100%;
-  }
+  .header-nav-donate {
+    margin-left: 0.5rem;
 
-  .button {
-    @include hover {
-      color: $color-black;
+    @include media-breakpoint-up(md) {
+      margin-left: 1rem;
+      margin-top: -2px;
+    }
+
+    a {
+      // font-family: $button-font-family;
+      font-size: $font-size-base;
+      line-height: 1.1111111111;
+      padding: 0.1875rem 0.75rem;
+
+      &:focus,
+      &:hover {
+        color: lighten($color-black, 5%);
+      }
+
+      @include media-breakpoint-up(md) {
+        font-size: $font-size-lg;
+        padding: 0.375rem 2rem 0.125rem 2rem;
+      }
     }
   }
 }
